# opentoonz

./: #pragma once.cpp  .clang-format  .gitattributes  .gitignore  .travis.yml  AGENTS.md  Airlanggayudhoyono@Intel-Mil.Info  Allows Click+Drag to move tag.cpp  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ISSUE_TEMPLATE.md  LICENSE.txt  README.md  SECURITY.md  TLV Alpha Lock  appveyor.yml  build.rs  flake.nix  mise.toml
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  qt6_migration_regression.yml  qt6_validation_report.yml
.github/qt6-validation/: README.md  manual-goals.json
.github/workflows/: CMakeLists.txt  ci.yml  cmake.yml  qt6_project_sync.yml  workflow_lint.yml  workflow_linux.yml  workflow_macos.yml  workflow_qt6_experimental_binaries.yml  workflow_windows.yml
ci-scripts/linux/: travis-build.sh  travis-install.sh
ci-scripts/osx/: travis-build.sh  travis-install.sh
doc/: README_chs.md  README_ja.md  audit_fix_stack_report.md  how_to_build_bsd.md  how_to_build_linux.md  how_to_build_macosx.md  how_to_build_macosx_ja.md  how_to_build_nix_mise.md  how_to_build_win.md  how_to_build_win_chs.md  how_to_build_win_ja.md  how_to_extract_opentoonz.md  how_to_import_swf.md  how_to_stylesheet.md  how_to_test_prs.md  how_to_test_prs_chs.md  how_to_use_ToonzFarm.md  qt6_implementation_recommendations.md  qt6_migration_goal_prompt.md  qt6_migration_study.md  qt6_remaining_work_and_manual_verification.md  rust_migration_study.md  rust_port_codex_goal_prompt.md
doc/qt6_port_progress/: 2026-06-08-functional-gaps.md  2026-06-08-manual-verification-checklist.md  2026-06-15-functional-gaps.md  2026-06-15-manual-verification-checklist.md  2026-06-22-functional-gaps.md  2026-06-22-manual-verification-checklist.md  2026-06-29-functional-gaps.md  2026-06-29-manual-verification-checklist.md  2026-07-06-functional-gaps.md  2026-07-06-manual-verification-checklist.md  2026-07-13-branch-audit.md  2026-07-14-integration-delta.md  2026-07-14-script-runtime-boundary.md  README.md
doc/sample_data/: LICENSE  README.md
flare/cmake/: BundleInfo.plist.in
flare/install/: SystemVar.ini  copy_plugin.sh  creatorfinalizeProgram.sh  finalizeProgram.sh  installName.sh  package_sdk.sh
flare/sources/: CMakeLists.txt
flare/sources/toonzlib/: CMakeLists.txt  fill.cpp  imagepainter.cpp  preferences.cpp  sceneproperties.cpp  scriptbinding_level.cpp  stagevisitor.cpp  studiopalettecmd.cpp  txshlevelcolumn.cpp  txshmeshcolumn.cpp
flare/sources/xdg-data/: CMakeLists.txt  io.github.Flare.desktop  io.github.OpenToonz.desktop
nix/: opentoonz-env.nix
plugins/blur/: CMakeLists.txt  blur.cpp
plugins/geom/: CMakeLists.txt  geom.cpp
plugins/multiplugin/: CMakeLists.txt
scripts/: OpenToonzRegistrySetup_注册表设置.bat
scripts/macos/: assert-arm64-bundle.sh  create-dmg.sh  package-nix-app.sh  sign-notarize.sh
scripts/nix/: prepare-tiff.sh
scripts/qt6/: check-appkit-event-scope.sh  check-buttongroup-scope.sh  check-checkbox-state-scope.sh  check-combobox-activated-scope.sh  check-core5compat-scope.sh  check-desktopwidget-scope.sh  check-enterevent-scope.sh  check-fontdatabase-scope.sh  check-fontmetrics-scope.sh  check-graphicsscenecontextmenu-scope.sh  check-graphicssceneevent-scope.sh  check-guardrail-docs.sh  check-gui-smoke-registry.sh  check-helpevent-scope.sh  check-highdpi-attribute-scope.sh  check-hoverevent-scope.sh  check-localfileurl-scope.sh  check-mediaplayer-scope.sh  check-migration-preflight.sh  check-modern-qt-macros.sh  check-mouseevent-scope.sh  check-multimedia-scope.sh  check-no-qregexp.sh  check-packaged-runtime.sh  check-qaction-scope.sh  check-qcolor-scope.sh  check-qglformat-scope.sh  check-qgllegacy-scope.sh  check-qimage-mirrored-scope.sh  check-qiodevice-open-scope.sh  check-qkeysequence-scope.sh  check-qtextstream-scope.sh  check-qtime-elapsed-scope.sh  check-script-scope.sh  (+15 more)
src/: main.rs  qt.rs
template/: .gitignore  CMakeLists.txt
template-backup/: CMakeLists.txt  README.md
template/cmake/: dependencies.cmake
template/docs/: README.md  architecture.md  c++技术栈.md  configuration.md  docking.md  getting-started.md  i18n.md  menus.md  panels.md  rooms.md  tech-stack.md  themes.md  toolbars.md
template/resources/: resources.qrc
template/runtime/translations/: qt_de.qm
template/runtime/translations/japanese/: template.qm
template/src/: CMakeLists.txt  main.cpp
template/src/framework/: appcontext.cpp  appcontext.h  database.h  docklayout.cpp  docklayout.h  dockwidget.cpp  floatingpanelcommand.h  logger.h  mainwindow.cpp  mainwindow.h  menubar.cpp  menubar.h  menubarcommand.cpp  menubarcommand.h  pane.cpp  pane.h  tdockwindows.cpp  tdockwindows.h  thememanager.cpp
template/src/framework/preferences/: checkbox.cpp  checkbox.h  doublefield.cpp  doublefield.h  dvdialog.cpp  dvdialog.h  filefield.cpp  filefield.h  intfield.cpp  intfield.h  lineedit.cpp  lineedit.h  prefpopup.cpp  prefpopup.h  prefsystem.cpp  prefsystem.h
template/src/panels/: canvaspanel.h  logpanel.cpp  logpanel.h  register.cpp
template/src/panels/combo/: comboviewerpane.cpp  comboviewerpane.h  ruler.cpp  ruler.h
template/src/panels/design/: designtoolbar.cpp  designtoolbar.h  layerspanel.cpp  layerspanel.h  propertiespanel.cpp  propertiespanel.h
template/tests/: CMakeLists.txt  test_main.cpp
template/translations/chinese/: template.qm  template.ts
template/translations/japanese/: template.qm  template.ts
toonz/: CMakeLists.txt  README.md  opentoonz.files  opentoonz.includes
toonz/sources/tests/audit/: CMakeLists.txt  externfx_process_regression.cpp  svg_parser_regression.cpp  thirdparty_empty_path_regression.cpp  tzl_header_regression.cpp  tzp_color_names_regression.c
toonz/sources/toonzfarm/tfarm/: CMakeLists.txt  service.cpp  tbaseserver.cpp  tfarmcontroller_c.cpp  tfarmexecutor.cpp  tfarmproxy.cpp  tfarmserver_c.cpp  tfarmserverstub.cpp  tfarmtask.cpp  tlog.cpp  tserverproxy.cpp  ttcpipclient.cpp  ttcpipserver.cpp
toonz/sources/toonzpreview/: CMakeLists.txt  toonzpreview.cpp  toonzpreview.def  toonzpreview.h
(+2620 files in other folders)
