install(FILES io.github.Flare.appdata.xml DESTINATION ${CMAKE_INSTALL_PREFIX}/share/metainfo)
install(FILES io.github.Flare.desktop DESTINATION ${CMAKE_INSTALL_PREFIX}/share/applications)
install(FILES io.github.Flare.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/icons/hicolor/256x256/apps)
install(FILES io.github.Flare.appdata.xml DESTINATION ${CMAKE_INSTALL_PREFIX}/share/metainfo)
install(FILES io.github.Flare.desktop DESTINATION ${CMAKE_INSTALL_PREFIX}/share/applications)
# Use the same icon for now; can be replaced with a Flare icon later
install(FILES io.github.Flare.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/icons/hicolor/256x256/apps)

